--- a/src/main/resources/templates/MaterialOrder/edit.html
+++ b/src/main/resources/templates/MaterialOrder/edit.html
@@ -7,6 +7,7 @@
 
     <title> Поръчка на материали </title>
     <link href="/css/form.css" rel="stylesheet">
+    <link href="/css/datepicker.css" rel="stylesheet">
 </head>
 
 <body>
@@ -26,7 +27,7 @@
                         <h5 class="card-title mb-0">Редактирай поръчка на материал</h5>
                     </div>
                     <div class="card-body">
-                        <form th:action="@{'/material-order/edit/' + ${order.id}}" method="get" th:object="${order}">
+                        <form th:action="@{'/material-order/editSubmit/' + ${order.id}}" method="post" th:object="${order}">
                             <div class="form-group">
                                 <label for="materialId">Вид на материала:</label>
                                 <div class="form-check">
@@ -49,6 +50,13 @@
                                 </div>
                             </div>
                             <div class="form-group">
+                                <label for="materialId">Номер на поръчан материал:</label>
+                                <input type="text" id="materialId1" name="materialId"
+                                       th:field="${order.materialId}" disabled/>
+                                <input type="hidden"  name="materialId"
+                                       th:field="${order.materialId}" />
+                            </div>
+                            <div class="form-group">
                                 <div id="plateDropdown" style="display: none;">
                                     <label for="materialId">Тарелки:</label>
                                     <select class="form-select" size="3" aria-label="size 3 select example" id="plateId" name="materialId">
@@ -69,12 +77,28 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="orderedQuantity">Брой:</label>
+                                <label for="orderedQuantity">Поръчан брой:</label>
                                 <input type="number" id="orderedQuantity" name="orderedQuantity" required
                                        th:field="${order.orderedQuantity}"/>
                             </div>
+                            <div class="form-group">
+                                <label for="receivedQuantity">Доставен брой:</label>
+                                <input type="number" id="receivedQuantity" name="receivedQuantity"
+                                       th:field="${order.receivedQuantity}"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="materialPrice">Обща цена на поръчката:</label>
+                                <input type="number" id="materialPrice" name="materialPrice"
+                                       th:field="${order.materialPrice}"/>
+                            </div>
+                            <div class="form-group">
+                            <label for="arrivalDate">Дата на доставка:</label>
+                                <center>
+                            <input type="date" name="arrivalDate" id="arrivalDate"  th:field="${order.arrivalDate}">
+                                </center>
+                            </div>
                             <div class="text-center">
-                                <button type="submit" class="btn btn-primary" >Поръчай</button>
+                                <button type="submit" class="btn btn-primary" >Редактирай поръчка</button>
                             </div>
                         </form>
                     </div>
