--- a/src/main/resources/templates/MaterialOrder/show.html
+++ b/src/main/resources/templates/MaterialOrder/show.html
@@ -42,9 +42,9 @@
                                     <tr th:each="order : ${orders}"  th:unless="${order.arrivalDate}">
                                         <td th:text="${order.id}"></td>
                                         <td th:text="${order.materialId}"></td>
-                                        <td th:if="${order.materialType == 'CARTON'}">Кутия</td>
+                                        <td th:if="${order.materialType == 'CARTON'}">Кашон</td>
                                         <td th:if="${order.materialType == 'PLATE'}">Тарелка</td>
-                                        <td th:if="${order.materialType == 'PACKAGE'}">Кашон</td>
+                                        <td th:if="${order.materialType == 'PACKAGE'}">Кутия</td>
                                         <td th:text="${order.orderedQuantity}"></td>
                                         <td>
                                             <form th:action="@{'/material-order/delete/' + ${order.id}}" method="post"
