--- a/src/main/resources/templates/MaterialOrder/showMaterialForOrderId.html
+++ b/src/main/resources/templates/MaterialOrder/showMaterialForOrderId.html
@@ -39,8 +39,19 @@
                                     </thead>
                                     <tbody>
                                     <tr th:each="order : ${orders}">
-                                        <td th:text="${order.materialId}"></td>
-                                        <td th:text="${order.materialType}"></td>
+                                        <td>
+                                            <span th:if="${order.materialType == 'CARTON'}"
+                                                  th:text="${#arrays.length(cartons) > order.materialId ? cartons[order.materialId-1].name : order.materialId}"></span>
+                                            <span th:if="${order.materialType == 'PACKAGE'}"
+                                                  th:text="${#arrays.length(packages) > order.materialId ? packages[order.materialId-1].name :order.materialId}"></span>
+                                            <span th:if="${order.materialType == 'PLATE'}"
+                                                  th:text="${#arrays.length(plates) > order.materialId ? plates[order.materialId-1].name : order.materialId}"></span>
+                                        </td>
+                                        <td>
+                                            <span th:if="${order.materialType == 'CARTON'}">Кашон</span>
+                                            <span th:if="${order.materialType == 'PACKAGE'}">Кутия</span>
+                                            <span th:if="${order.materialType == 'PLATE'}">Тарелка</span>
+                                        </td>
                                         <td th:text="${order.orderedQuantity}"></td>
 
                                     </tr>
