--- a/src/main/resources/templates/MonthlyOrder/orderDetails.html
+++ b/src/main/resources/templates/MonthlyOrder/orderDetails.html
@@ -69,7 +69,17 @@ document.addEventListener("DOMContentLoaded", function() {
                                     <tbody>
                                     <tr th:each="orderProduct, iter : ${orderProducts}">
                                         <td>
-                                            <img th:src="@{${backendBaseUrl} + '/'+ ${products[iter.index]?.photo}}" alt="no image" height="100" width="100">
+                                            <img th:if="${products[iter.index]?.photo != null}"
+                                                 th:src="@{${backendBaseUrl} + '/' + ${products[iter.index]?.photo}}"
+                                                 alt="no image"
+                                                 height="100"
+                                                 width="100">
+                                            <img th:unless="${products[iter.index]?.photo != null}"
+                                                 class="card-img-top"
+                                                 src="/img/photos/noImage.png"
+                                                 alt="Default Image"
+                                                 height="100"
+                                                 width="100">
                                         </td>
                                         <td th:text="${products[iter.index]?.productCode} + ' ' + ${products[iter.index]?.name}"></td>
                                         <td th:text="${orderProduct.orderedQuantity}"></td>
