--- a/src/main/resources/templates/Invoice/ShowId.html
+++ b/src/main/resources/templates/Invoice/ShowId.html
@@ -31,7 +31,7 @@ document.addEventListener("DOMContentLoaded", function() {
         <main class="content">
             <div class="row">
                 <div class="col-md-6 text-start">
-                    <h6 style="color:red;"> Цените се определят по курс на евро 1.95583</h6>
+                    <h6 style="color:red;"> Цените се определят по курс на евро </h6>
                 </div>
                 <div class="col-md-6 text-end">
 
@@ -119,7 +119,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                             <span th:if="${invoiceDTO.invoiceNumber >= 2000000000}" th:text="${orderProductDTO.sellingPrice}"></span>
                                             <span th:if="${invoiceDTO.invoiceNumber < 2000000000}">
                                                 <script th:inline="javascript">
-                                                  var originalValue = /*[[${orderProductDTO.sellingPrice * 1.95583}]]*/ 0;
+                                                  var originalValue = /*[[${orderProductDTO.sellingPrice / 1.95583}]]*/ 0;
                                                   var roundedValue = originalValue.toFixed(2);
                                                   document.write(roundedValue);
                                                 </script>
@@ -132,10 +132,10 @@ document.addEventListener("DOMContentLoaded", function() {
                                              th:each="productDTO : ${productDTOS}" th:if="${productDTO.id == orderProductDTO.packageId}"
                                              th:id="${'productValue-' + productDTO.id}">
                                              <span th:if="${invoiceDTO.invoiceNumber >= 2000000000}" th:text="${productPrice * orderNumber}"></span>
-                                             <span hidden th:unless="${invoiceDTO.invoiceNumber >= 2000000000}" th:text="${productPrice * orderNumber * 1.95583}"></span>
+                                             <span hidden th:unless="${invoiceDTO.invoiceNumber >= 2000000000}" th:text="${productPrice * orderNumber / 1.95583}"></span>
                                                 <span th:unless="${invoiceDTO.invoiceNumber >= 2000000000}">
                                                     <script th:inline="javascript">
-                                                    var originalValue = /*[[${productPrice * orderNumber * 1.95583}]]*/ 0;
+                                                    var originalValue = /*[[${productPrice * orderNumber / 1.95583}]]*/ 0;
                                                     var roundedValue = originalValue.toFixed(2);
                                                     document.write(roundedValue);
                                                     </script>
@@ -208,7 +208,7 @@ var invoiceId = [[${InvoiceId}]];
     var sellingPrice = [[${sellingPrice}]];
 
     // Calculate the value based on the condition
-    var calculatedValue = invoiceId >= 2000000000 ? sellingPrice : sellingPrice * 1.95583;
+    var calculatedValue = invoiceId >= 2000000000 ? sellingPrice : sellingPrice / 1.95583;
 
     // Round the calculated value to two decimal places
     var roundedValue = roundValue(calculatedValue);
